--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
             var losMinutos = new Date().getMinutes();
             var losSegundos = new Date().getSeconds();
 
-            function preload() {
-                datos = loadJSON("https://digimon-api.vercel.app/api/digimon");
-            }
+            function preload() { datos = loadJSON("https://digimon-api.vercel.app/api/digimon"); }
             function setup() {
                 datosArreglados = Object.values(datos);
-                x = Math.floor(random(0, (datosArreglados.length)-1));
+                x = Math.round(random(0, (datosArreglados.length)-1));
                 select("#title").html(datosArreglados[x].name);
                 select("#time").html(lasHoras + ":" + losMinutos + ":" + losSegundos);
                 select("#level").html(datosArreglados[x].level);
